--- a/Index.html
+++ b/Index.html
@@ -18,13 +18,121 @@
 </head>
 <body>
     <header>
-        <div class="container">
-            <h1 class="col-md-4">Connectin'4</h1>
-        </div>
+            <nav class="nav">
+                <div class="container">
+                    <div class="col-md-8">
+                        <h1 class="col-md-4 title">Connectin'4</h1>
+                    </div>
+                    <div class="col-md-4">
+                        <a>Tutorial</a>
+                    </div>
+                </div>
+            </nav>    
+        
     </header>
     <section class="options">
     </section>
     <section id="gamepad">
+        <div class="container">
+            <div class="board col-md-12" id="board">
+                <div class="line">
+                    <div class="slot">
+                    </div>
+                    <div class="slot">
+                    </div>
+                    <div class="slot">
+                    </div>
+                    <div class="slot">
+                    </div>
+                    <div class="slot">
+                    </div>
+                    <div class="slot">
+                    </div>
+                    <div class="slot">
+                    </div>
+                </div>
+                <div class="line">
+                    <div class="slot">
+                    </div>
+                    <div class="slot">
+                    </div>
+                    <div class="slot">
+                    </div>
+                    <div class="slot">
+                    </div>
+                    <div class="slot">
+                    </div>
+                    <div class="slot">
+                    </div>
+                    <div class="slot">
+                    </div>
+                </div>
+                <div class="line">
+                    <div class="slot">
+                    </div>
+                    <div class="slot">
+                    </div>
+                    <div class="slot">
+                    </div>
+                    <div class="slot">
+                    </div>
+                    <div class="slot">
+                    </div>
+                    <div class="slot">
+                    </div>
+                    <div class="slot">
+                    </div>
+                </div>
+                <div class="line">
+                    <div class="slot">
+                    </div>
+                    <div class="slot">
+                    </div>
+                    <div class="slot">
+                    </div>
+                    <div class="slot">
+                    </div>
+                    <div class="slot">
+                    </div>
+                    <div class="slot">
+                    </div>
+                    <div class="slot">
+                    </div>
+                </div>
+                <div class="line">
+                    <div class="slot">
+                    </div>
+                    <div class="slot">
+                    </div>
+                    <div class="slot">
+                    </div>
+                    <div class="slot">
+                    </div>
+                    <div class="slot">
+                    </div>
+                    <div class="slot">
+                    </div>
+                    <div class="slot">
+                    </div>
+                </div>
+                <div class="line">
+                    <div class="slot">
+                    </div>
+                    <div class="slot">
+                    </div>
+                    <div class="slot">
+                    </div>
+                    <div class="slot">
+                    </div>
+                    <div class="slot">
+                    </div>
+                    <div class="slot">
+                    </div>
+                    <div class="slot">
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
     <footer class="container">
         <h3>About:</h3>
