--- a/Index.html
+++ b/Index.html
@@ -6,10 +6,6 @@
 
     <title>Connectin'</title>
 
-    <!-- Bootstrap's online CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css"
-          integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
-
     <!-- My personal CSS-->
     <link rel="stylesheet" type="text/css" href="css/Style.css">
 
@@ -18,123 +14,81 @@
 </head>
 <body>
     <header>
-            <nav class="nav">
-                <div class="container">
-                    <div class="col-md-8">
-                        <h1 class="col-md-4 title">Connectin'4</h1>
-                    </div>
-                    <div class="col-md-4">
-                        <a>Tutorial</a>
-                    </div>
-                </div>
-            </nav>    
-        
+            <h1><span class="logo">></span>Connectin'4</h1>
+            <nav>
+                <ul>
+                    <li><a href="#">Tutorial</a></li>
+                    <li><a href="#">Registration</a></li>
+                    <li><a href="#">Game</a></li>
+                    <li><a href="#">About</a></li>
+                </ul>
+             </nav>
     </header>
-    <section class="options">
-    </section>
-    <section id="gamepad">
-        <div class="container">
-            <div class="board col-md-12" id="board">
-                <div class="line">
-                    <div class="slot">
-                    </div>
-                    <div class="slot">
-                    </div>
-                    <div class="slot">
-                    </div>
-                    <div class="slot">
-                    </div>
-                    <div class="slot">
-                    </div>
-                    <div class="slot">
-                    </div>
-                    <div class="slot">
-                    </div>
-                </div>
-                <div class="line">
-                    <div class="slot">
-                    </div>
-                    <div class="slot">
-                    </div>
-                    <div class="slot">
-                    </div>
-                    <div class="slot">
-                    </div>
-                    <div class="slot">
-                    </div>
-                    <div class="slot">
-                    </div>
-                    <div class="slot">
-                    </div>
-                </div>
-                <div class="line">
-                    <div class="slot">
-                    </div>
-                    <div class="slot">
-                    </div>
-                    <div class="slot">
-                    </div>
-                    <div class="slot">
-                    </div>
-                    <div class="slot">
-                    </div>
-                    <div class="slot">
-                    </div>
-                    <div class="slot">
-                    </div>
-                </div>
-                <div class="line">
-                    <div class="slot">
-                    </div>
-                    <div class="slot">
-                    </div>
-                    <div class="slot">
-                    </div>
-                    <div class="slot">
-                    </div>
-                    <div class="slot">
-                    </div>
-                    <div class="slot">
-                    </div>
-                    <div class="slot">
-                    </div>
-                </div>
-                <div class="line">
-                    <div class="slot">
-                    </div>
-                    <div class="slot">
-                    </div>
-                    <div class="slot">
-                    </div>
-                    <div class="slot">
-                    </div>
-                    <div class="slot">
-                    </div>
-                    <div class="slot">
-                    </div>
-                    <div class="slot">
-                    </div>
-                </div>
-                <div class="line">
-                    <div class="slot">
-                    </div>
-                    <div class="slot">
-                    </div>
-                    <div class="slot">
-                    </div>
-                    <div class="slot">
-                    </div>
-                    <div class="slot">
-                    </div>
-                    <div class="slot">
-                    </div>
-                    <div class="slot">
-                    </div>
-                </div>
+    <main>
+        <section class="tutorial">
+            <h1>This is supposed to be a tutorial :) </h1>
+        </section>
+        <section class="gamepad">
+            <h1>Gamepad</h1>
+            <div class="col" id="01">
+                    <div class="slot"></div>
+                    <div class="slot"></div>
+                    <div class="slot"></div>
+                    <div class="slot"></div>
+                    <div class="slot"></div>
+                    <div class="slot"></div>
             </div>
-        </div>
-    </section>
-    <footer class="container">
+            <div class="col" id="01">
+                    <div class="slot"></div>
+                    <div class="slot"></div>
+                    <div class="slot"></div>
+                    <div class="slot"></div>
+                    <div class="slot"></div>
+                    <div class="slot"></div>
+            </div>
+            <div class="col" id="01">
+                    <div class="slot"></div>
+                    <div class="slot"></div>
+                    <div class="slot"></div>
+                    <div class="slot"></div>
+                    <div class="slot"></div>
+                    <div class="slot"></div>
+            </div>
+            <div class="col" id="01">
+                    <div class="slot"></div>
+                    <div class="slot"></div>
+                    <div class="slot"></div>
+                    <div class="slot"></div>
+                    <div class="slot"></div>
+                    <div class="slot"></div>
+            </div>
+            <div class="col" id="01">
+                    <div class="slot"></div>
+                    <div class="slot"></div>
+                    <div class="slot"></div>
+                    <div class="slot"></div>
+                    <div class="slot"></div>
+                    <div class="slot"></div>
+            </div>
+            <div class="col" id="01">
+                    <div class="slot"></div>
+                    <div class="slot"></div>
+                    <div class="slot"></div>
+                    <div class="slot"></div>
+                    <div class="slot"></div>
+                    <div class="slot"></div>
+            </div>
+            <div class="col" id="01">
+                    <div class="slot"></div>
+                    <div class="slot"></div>
+                    <div class="slot"></div>
+                    <div class="slot"></div>
+                    <div class="slot"></div>
+                    <div class="slot"></div>
+            </div>
+        </section>
+    </main>
+    <footer>
         <h3>About:</h3>
         <p>This project was created by me. It was made with the objective to accomplish the curricular unity of Web 
             Technologies from the University of Porto.</p>
