Tried to add texture and started board implement

--- a/Index.html
+++ b/Index.html
@@ -37,70 +37,41 @@
                 </div>
             </section>
         </div>
-        <section class="gamepad">
-            <h2>Gamepad</h2>
-            <div class="board">
-                <div class="col" id="01">
-                        <div class="slot"></div>
-                        <div class="slot"></div>
-                        <div class="slot"></div>
-                        <div class="slot"></div>
-                        <div class="slot selected"></div>
-                        <div class="slot"></div>
+        <div class="main-content">
+            <section class="settings">
+                <div class="bar">
+                    <button id="expand-settings"
+                            class="expand-settings">
+                        Settings
+                    </button>
                 </div>
-                <div class="col" id="01">
-                        <div class="slot"></div>
-                        <div class="slot"></div>
-                        <div class="slot"></div>
-                        <div class="slot"></div>
-                        <div class="slot selected"></div>
-                        <div class="slot"></div>
+                <div class="settings-expanded">
+                    <h6>Select the size of the board:
+                    </h6>
+                    <select>
+                        <option>7x6 Standard</option>
+                        <option>5x4
+                        little</option>
+                        <option>8x7 bigger</option>
+                    </select>
+                    <h6>AI Difficulty level:
+                    </h6>
+                    <select>
+                        <option>Medium</option>
+                        <option>Easy</option>
+                        <option>Hard</option>
+                    </select>
                 </div>
-                <div class="col" id="01">
-                        <div class="slot"></div>
-                        <div class="slot"></div>
-                        <div class="slot"></div>
-                        <div class="slot"></div>
-                        <div class="slot"></div>
-                        <div class="slot"></div>
+            </section>
+            <section class="gamepad">
+                <h2>Gamepad</h2>
+                <div class="board" id="board">
                 </div>
-                <div class="col" id="01">
-                        <div class="slot"></div>
-                        <div class="slot"></div>
-                        <div class="slot"></div>
-                        <div class="slot"></div>
-                        <div class="slot"></div>
-                        <div class="slot"></div>
-                </div>
-                <div class="col" id="01">
-                        <div class="slot"></div>
-                        <div class="slot"></div>
-                        <div class="slot"></div>
-                        <div class="slot"></div>
-                        <div class="slot"></div>
-                        <div class="slot"></div>
-                </div>
-                <div class="col" id="01">
-                        <div class="slot"></div>
-                        <div class="slot"></div>
-                        <div class="slot"></div>
-                        <div class="slot"></div>
-                        <div class="slot"></div>
-                        <div class="slot"></div>
-                </div>
-                <div class="col" id="01">
-                        <div class="slot"></div>
-                        <div class="slot"></div>
-                        <div class="slot"></div>
-                        <div class="slot"></div>
-                        <div class="slot"></div>
-                        <div class="slot"></div>
-                </div>
-            </div>
-        </section>
-        <section>
-            <h2>LeaderBoard</h2>
-        </section>
+            </section>
+            <section>
+                <h2>LeaderBoard</h2>
+            </section>
+        </div>
     </main>
     <footer>
         <div class="footer-content">
