--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
                 <h2 class="title2">GamePad</h2>
                 <section class="game">
                     <div id="base">
+
                       <div id="preStart" class="preStart">
                         <div class="preferences" id="settingsBttn">
                           <figure>
@@ -114,6 +115,26 @@
                           <p class="gameIcon">Start Game!</p>
                         </div>
                       </div>
+
+                      <div id="settingsContent" class="settingsContent">
+                        <h3>Settings</h3>
+                          <h4>Game difficulty:<h4>
+                          <select id="difficulty">
+                            <option>Medium</option>
+                            <option>Easy</option>
+                            <option>Hard</option>
+                          </select>
+                          <h4>Board Size:<h4>
+                          <select id="size">
+                            <option value="1">7x6 Standard</option>
+                            <option value="2">5x4 little</option>
+                            <option value="3">8x7 bigger</option>
+                          </select>
+                          <button id="apply" type="button" class="FormButton" style="width: 100%">
+                            Apply and start game
+                          </button>
+                      </div>
+
                     </div>
                 </section>
             </section>
