--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
             <section class="mainArea">
                 <h2 class="title2">GamePad</h2>
                 <section class="game">
+
                     <div id="base">
 
                       <div id="preStart" class="preStart">
@@ -110,7 +111,7 @@
                         <div class="start" id="startBttn">
                           <figure>
                             <img src="img/start.png"
-                            alt="The Pulpit Rock" width="80px" height="80px">
+                            alt="Start Game" width="80px" height="80px">
                           </figure>
                           <p class="gameIcon">Start Game!</p>
                         </div>
@@ -135,6 +136,26 @@
                           </button>
                       </div>
 
+                      <div id="SelectVS" class="pvpContent">
+                        <div class="preferences" id="vsComputer">
+                          <figure>
+                            <img src="img/settings.png"
+                            alt="vs pc" width="80px" height="80px">
+                          </figure>
+                          <p class="gameIcon">Settings</p>
+                        </div>
+                        <div class="start" id="vsPlayer" onclick="startGame(cols, cels)">
+                          <figure>
+                            <img src="img/start.png"
+                            alt="vs player" width="80px" height="80px">
+                          </figure>
+                          <p class="gameIcon">Start Game!</p>
+                        </div>
+                      </div>
+
+                      <div id="gameFooter" class="gameFooter">
+
+                      </div>
                     </div>
                 </section>
             </section>
