fixed some errors. added transitions
Still have lot of TODOs

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Connect4</title>
         <link rel="stylesheet" href="css/mainStyle.css">
         <link rel="stylesheet" href="css/cards.css">
+        <link rel="stylesheet" href="css/boardStyle.css">
         <link rel="stylesheet" href="css/modalStyle.css">
     </head>
     <body>
@@ -139,17 +140,17 @@
                       <div id="SelectVS" class="pvpContent">
                         <div class="preferences" id="vsComputer">
                           <figure>
-                            <img src="img/settings.png"
+                            <img src="img/vscomputer.png"
                             alt="vs pc" width="80px" height="80px">
                           </figure>
-                          <p class="gameIcon">Settings</p>
+                          <p class="gameIcon">Vs computer</p>
                         </div>
-                        <div class="start" id="vsPlayer" onclick="startGame(cols, cels)">
+                        <div class="start" id="vsPlayer" onclick="startGame(n,m)">
                           <figure>
-                            <img src="img/start.png"
+                            <img src="img/vsplayer.png"
                             alt="vs player" width="80px" height="80px">
                           </figure>
-                          <p class="gameIcon">Start Game!</p>
+                          <p class="gameIcon">Vs player</p>
                         </div>
                       </div>
 
