Board generated... needs to implement game logic

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <h2 class="title2">GamePad</h2>
                 <section class="game">
 
-                    <div id="base">
+                    <div id="base" class="base">
 
                       <div id="preStart" class="preStart">
                         <div class="preferences" id="settingsBttn">
@@ -155,7 +155,11 @@
                       </div>
 
                       <div id="gameFooter" class="gameFooter">
-
+                        <h4>Message board:</h4>
+                        <div>
+                          <canvas id="canvas" width="300" height="300">
+                          </canvas>
+                        </div>
                       </div>
                     </div>
                 </section>
