--- a/index.html
+++ b/index.html
@@ -84,7 +84,6 @@
                 <div class="navigation">
                     <nav class="navigation">
                         <ul>
-                          <li><button href="" onclick="transition(1)">Game</button></li>
                           <li><button href="" onclick="transition(2)">Tutorial</button></li>
                           <li><button href="" onclick="transition(3)">Exit</button></li>
                           <li><button href="" onclick="transition(4)">About</button></li>
@@ -145,7 +144,7 @@
                           </figure>
                           <p class="gameIcon">Vs computer</p>
                         </div>
-                        <div class="start" id="vsPlayer" onclick="startGame(n,m)">
+                        <div class="start" id="vsPlayer" onclick="startGame()">
                           <figure>
                             <img src="img/vsplayer.png"
                             alt="vs player" width="80px" height="80px">
