Tiny update on the HTML

--- a/index.html
+++ b/index.html
@@ -158,7 +158,6 @@
                       <div id="gameFooter" class="gameFooter">
                         <h4>Message board:</h4>
                         <div>
-
                         </div>
                       </div>
                     </div>
@@ -178,8 +177,9 @@
                         title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
             </div>
         </footer>
-        <script type="text/javascript" src="js/game.js"></script>
+        <script type="text/javascript" src="js/globals.js"></script>      
+        <script type="text/javascript" src="js/main.js"></script>
+        <script type="text/javascript" src="js/animations.js"></script>
         <script type="text/javascript" src="js/transitions.js"></script>
-        <script type="text/javascript" src="js/credentials.js"></script>
     </body>
 </html>
